--- a/Views/Shared/_VerticalLayout1.cshtml
+++ b/Views/Shared/_VerticalLayout1.cshtml
@@ -162,6 +162,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="~/ESM/VisitLogs" class="sub-nav__link nav-link ">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p style="color:#ffffff;font-weight:bold; "> Visitor Logs</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="~/ESM/NewIndividual" class="sub-nav__link nav-link ">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p style="color:#ffffff;font-weight:bold; ">Add Individual</p>
@@ -218,15 +224,21 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="~/MailIn_Out/NewMail" class="sub-nav__link nav-link ">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p style="color:#ffffff;font-weight:bold; ">Add Out Mail</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="~/MailIn_Out/InRecords" class="sub-nav__link nav-link ">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p style="color:#ffffff;font-weight:bold; ">In Mail Records</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="~/MailIn_Out/NewMail" class="sub-nav__link nav-link ">
+                                    <a href="~/MailIn_Out/NewInMail" class="sub-nav__link nav-link ">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p style="color:#ffffff;font-weight:bold; ">Add Mail</p>
+                                        <p style="color:#ffffff;font-weight:bold; ">Add In Mail</p>
                                     </a>
                                 </li>
                             </ul>
